--- a/mobile.css
+++ b/mobile.css
@@ -20,12 +20,12 @@
   }
 
   #hero {
-    height: 800px;
+    height: 700px;
     background-attachment: scroll;
     background-image: linear-gradient(rgba(68, 64, 64, 0.6),
     rgba(0, 0, 0, 0.4)),
     url(img/batman-hero.jpg);
-    background-size: 800px 100%;
+    background-size: 700px 100%;
     background-repeat: no-repeat;
     background-position: top;
     /*background-attachment: fixed; --> makes image glitch */
@@ -42,16 +42,23 @@
     background-color: rgba(93, 145, 214, 0.5);
     background-color: rgba(114, 169, 226, 0.3);
     background-color: rgba(123, 157, 201, 0.5);
-    bottom: 40%;
-    height: 150px;
-    max-width: 70%;
-    padding: 0 20px 10px;
+/*    bottom: 40%;
+    height: 150px;*/
+    top: 35%;
+    height: 130px;
+    
+    /*max-width: 70%;*/
+    padding: 0 10px 10px;
+    position: relative;
   }
 
-  #hero h1 {}
+  #hero h1 {
+    padding-bottom: 10px;
+  }
 
   #hero h2 {
       font-weight: 400;
+      padding-top: 10px;
   }
 
   h3 {
@@ -89,7 +96,14 @@
     margin-top: -80px;
     visibility: hidden;
   }
-
+  
+  /*
+  ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
+  ██     ██ ██   ██ ██   ██ ██   ██ ██   ██ ██      ██   ██ ██
+  ██  █  ██ ██████  ███████ ██████  ██████  █████   ██████  ███████
+  ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
+   ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
+  */
   .wrappers {
     border: 12px solid whitesmoke;
     height: 280px;
@@ -98,9 +112,8 @@
 
   .hero-to-movies,
   .movies-to-actors, {
-    background-repeat: no-repeat;
-    background-size: 180% 100%;
-    background-position: bottom;
-    background-attachment: fixed;
+    /*background-size: 50% 100%;*/
+    /*background-position: bottom;*/
+    /*background-attachment: fixed;*/
   }
 }
