--- a/desktop.css
+++ b/desktop.css
@@ -5,7 +5,7 @@
 ██   ██ ██           ██ ██  ██     ██    ██    ██ ██
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
-@media screen and (min-width: 1281px) {
+@media screen and (min-width: 1280px) {
   nav ul {
     /*margin-left: 21vw;*/
   }
@@ -35,6 +35,7 @@
 
   }
   #bat-video {
+    height: 100vh;
   }
 
   #hero h1 {
@@ -79,6 +80,10 @@
   ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
    ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
   */
+  .mobile-gallery {
+    display: none;
+  }
+  
   .container {
     background-color: rgb(38, 38, 38);
     display: flex;
