--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -115,17 +115,55 @@
     width: 100vw;
   }
 
+  /*.footer-img {
+  height: 60vh;
+  width: 100%;
+  background-image: url(img/wrapper/rain.jpg);
+  background-repeat: no-repeat;
+  background-size: 50% 50%;
+  background-position: right;
+  }*/
   /*
-     ██████   █████  ██      ██      ███████ ██████  ██    ██
-    ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
-    ██   ███ ███████ ██      ██      █████   ██████    ████
-    ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
-     ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
-    */
+  ██████   █████  ██      ██      ███████ ██████  ██    ██
+ ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
+ ██   ███ ███████ ██      ██      █████   ██████    ████
+ ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
+  ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
+ */
   .gallery-boxes {
+    display: none;
+  }
+
+  .mobile-gallery {
+    display: inline-block;
+    width: 100%;
+  }
+
+  .mobile-gallery h2 {
+/*    display: block;
+    font-family: 'Oswald', sans-serif;
+    font-size: 3rem;
+    padding: 80px 0;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;*/
+  }
+
+  .mobile-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .mobile-box {
+    height: 400px;
+    max-width: 300px;
+  }
+
+  /*  .gallery-boxes {
     width: 100%;
     height: 100%;
-    /*overflow: hidden;*/
+    overflow: hidden;
     text-align: center;
   }
 
@@ -133,7 +171,7 @@
     background-color: rgb(38, 38, 38);
     width: 100%;
     height: 100%;
-    /*margin: 50px;*/
+    margin: 50px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -142,7 +180,7 @@
 
   .box {
     width: 100%;
-    /*height: 50%;*/
+    height: 50%;
   }
 
   .box-image {
@@ -156,14 +194,16 @@
   span {
     display: block;
     color: whitesmoke;
+  }*/
+  /*
+ ███████  ██████   ██████  ████████ ███████ ██████
+ ██      ██    ██ ██    ██    ██    ██      ██   ██
+ █████   ██    ██ ██    ██    ██    █████   ██████
+ ██      ██    ██ ██    ██    ██    ██      ██   ██
+ ██       ██████   ██████     ██    ███████ ██   ██
+ */
+  .footer-wrapper {
+    display: none;
   }
 
-  .footer-img {
-    height: 60vh;
-    width: 100%;
-    background-image: url(img/wrapper/rain.jpg);
-    background-repeat: no-repeat;
-    background-size: 50% 50%;
-    background-position: right;
-  }
 }
