--- a/desktop.css
+++ b/desktop.css
@@ -143,7 +143,9 @@
     /*  overflow: hidden;
     box-sizing: border-box;*/
   }
-  
+  .footer-mobile-wrapper {
+    display: none;
+  }
   .footer-wrapper {
     height: 100%;
     width: 100%;
