--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -136,66 +136,44 @@
 
   .mobile-gallery {
     display: inline-block;
+    height: 1000px;
     width: 100%;
   }
-
-  .mobile-gallery h2 {
-/*    display: block;
-    font-family: 'Oswald', sans-serif;
-    font-size: 3rem;
-    padding: 80px 0;
-    text-transform: uppercase;
-    text-align: center;
-    width: 100%;*/
-  }
+  
 
   .mobile-container {
+    background-color: rgb(38, 38, 38);
+    height: 100%;
+    
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
   }
 
   .mobile-box {
-    height: 400px;
-    max-width: 300px;
-  }
-
-  /*  .gallery-boxes {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    background-color: burlywood;
+    min-width: 400px;
+    /*padding: 20px;*/
     text-align: center;
   }
-
-  .container {
-    background-color: rgb(38, 38, 38);
-    width: 100%;
-    height: 100%;
-    margin: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .box {
-    width: 100%;
-    height: 50%;
-  }
-
-  .box-image {
-    border: 10px solid whitesmoke;
-    width: 90vw;
-    max-width: 100vw;
-    height: 40vh;
-    max-height: 70vh;
-  }
-
-  span {
+  
+  .mobile-box img {
+    border: 5px solid whitesmoke;
+    border-bottom: none;
     display: block;
-    color: whitesmoke;
-  }*/
-  /*
+    height: 200px;
+    width: 100%;
+  }
+  
+  .mobile-box span {
+    background-color: rgb(253, 227, 17);
+    border: 5px solid whitesmoke;
+    border-top: none;
+    color: rgb(38, 38, 38);
+    height: 10vh;
+  }
+
+    /*
  ███████  ██████   ██████  ████████ ███████ ██████
  ██      ██    ██ ██    ██    ██    ██      ██   ██
  █████   ██    ██ ██    ██    ██    █████   ██████
@@ -204,6 +182,12 @@
  */
   .footer-wrapper {
     display: none;
+  }
+  .footer-mobile-wrapper {
+    background-color: blueviolet;
+    height: 500px;
+    width: 100%;
+
   }
 
 }
