--- a/desktop.css
+++ b/desktop.css
@@ -43,6 +43,12 @@
   }
 
   #hero h2 {}
+    
+    .movies h2,
+    .actors h2,
+    #gallery h2 {
+      padding: 80px 0;
+    }
 
   /*
     ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
