--- a/mobile.css
+++ b/mobile.css
@@ -37,6 +37,14 @@
   #bat-video {
     display: none;
   }
+  /*
+  ███████  ██████  ███    ██ ████████
+  ██      ██    ██ ████   ██    ██
+  █████   ██    ██ ██ ██  ██    ██
+  ██      ██    ██ ██  ██ ██    ██
+  ██       ██████  ██   ████    ██
+  */
+
 
   .hero-text {
     background-color: rgba(93, 145, 214, 0.5);
@@ -59,7 +67,11 @@
     font-weight: 400;
     padding-top: 10px;
   }
-
+  .movies h2,
+  .actors h2,
+  #gallery h2 {
+    padding: 40px 0;
+  }
   h3 {
     font-size: 1.5rem;
   }
@@ -104,7 +116,7 @@
   */
   .wrappers {
     border: 12px solid whitesmoke;
-    height: 280px;
+    height: 400px;
     width: 100%;
   }
 
@@ -113,5 +125,56 @@
     /*background-size: 50% 100%;*/
     /*background-position: bottom;*/
     /*background-attachment: fixed;*/
+  }
+
+  /*
+  ██████   █████  ██      ██      ███████ ██████  ██    ██
+ ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
+ ██   ███ ███████ ██      ██      █████   ██████    ████
+ ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
+  ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
+ */
+  .mobile-gallery {
+    height: 1800px;
+    display: block;
+    max-height: 100%;
+    width: 100%;
+  }
+
+  .mobile-container {
+  }
+
+  .mobile-box {
+    margin-bottom: 30px;
+    border: 10px solid whitesmoke;
+    /*min-width: 500px;*/
+    /*min-width: 400px;*/
+  }
+
+  .mobile-box img {
+    width: 100%;
+    /*height: 60%;*/
+    /*border: 5px solid black;*/
+    /*display: block;*/
+  }
+
+  .mobile-box a {
+    text-decoration: none;
+  }
+  
+  .mobile-box a span {
+    line-height: 3.6rem;
+    width: 100%;
+  }
+
+  /*
+███████  ██████   ██████  ████████ ███████ ██████
+██      ██    ██ ██    ██    ██    ██      ██   ██
+█████   ██    ██ ██    ██    ██    █████   ██████
+██      ██    ██ ██    ██    ██    ██      ██   ██
+██       ██████   ██████     ██    ███████ ██   ██
+*/
+  .footer-mobile-wrapper {
+    /*height: 400px;*/
   }
 }
