--- a/style.css
+++ b/style.css
@@ -175,13 +175,12 @@ nav ul li a {
 #gallery h2 {
   font-family: 'Oswald', sans-serif;
   font-size: 3rem;
-  padding: 80px 0;
   text-transform: uppercase;
   text-align: center;
   width: 100%;
   /*
   color: rgb(253, 227, 17);
-  border: solid whitesmoke;
+  border: solid whitesmoke4
   border-width: 0 0 10px;
   */
 }
@@ -190,7 +189,6 @@ nav ul li a {
   background-color: rgb(38, 38, 38);
   color: whitesmoke;
   margin: 0;
-  padding-top: 40px;
 }
 
 h3 {
@@ -227,7 +225,8 @@ p {
 }
 
 .box>span,
-.mobile-box>span {
+.mobile-box>span,
+.mobile-box a span {
   display: block;
   font-family: 'Cormorant', sans-serif;
   font-size: 2em;
