--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -123,6 +123,7 @@
   background-size: 50% 50%;
   background-position: right;
   }*/
+  
   /*
   ██████   █████  ██      ██      ███████ ██████  ██    ██
  ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
@@ -135,15 +136,15 @@
   }
 
   .mobile-gallery {
-    display: inline-block;
-    height: 1000px;
+    display: block;
+    max-height: 100%;
     width: 100%;
   }
   
 
   .mobile-container {
     background-color: rgb(38, 38, 38);
-    height: 100%;
+    /*height: 2200px;*/
     
     display: flex;
     justify-content: space-evenly;
@@ -151,27 +152,20 @@
   }
 
   .mobile-box {
-    background-color: burlywood;
-    min-width: 400px;
-    /*padding: 20px;*/
     text-align: center;
   }
   
   .mobile-box img {
-    border: 5px solid whitesmoke;
-    border-bottom: none;
     display: block;
-    height: 200px;
-    width: 100%;
   }
   
   .mobile-box span {
     background-color: rgb(253, 227, 17);
-    border: 5px solid whitesmoke;
-    border-top: none;
     color: rgb(38, 38, 38);
-    height: 10vh;
+    height: 60px;
+    /*border: 5px solid whitesmoke;*/
   }
+
 
     /*
  ███████  ██████   ██████  ████████ ███████ ██████
@@ -185,9 +179,8 @@
   }
   .footer-mobile-wrapper {
     background-color: blueviolet;
-    height: 500px;
-    width: 100%;
-
+    display: block;
+    height: 400px;
   }
 
 }
