--- a/tablet.css
+++ b/tablet.css
@@ -12,7 +12,7 @@
 
   .hero-text {
     height: 20%;
-   /*  
+    /*  
    width: 55%;
    max-width: 40%;
    min-width: 20vw;
@@ -67,5 +67,60 @@
 
   .actors-to-gallery {
     background-size: 200% 100%;
+  }
+
+  /*
+  ██████   █████  ██      ██      ███████ ██████  ██    ██
+ ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
+ ██   ███ ███████ ██      ██      █████   ██████    ████
+ ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
+  ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
+ */
+  .gallery-boxes {
+    display: none;
+  }
+
+  .mobile-gallery {
+    display: block;
+    max-height: 100%;
+    width: 100%;
+  }
+
+  .mobile-container {
+    background-color: rgb(38, 38, 38);
+    /*height: 2200px;*/
+    padding-bottom: 150px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+
+  .mobile-box {
+    background-color: burlywood;
+    text-align: center;
+    /*min-width: 500px;*/
+    /*min-width: 400px;*/
+  }
+
+  .mobile-box img {
+      width: 100%;
+    /*display: block;*/
+  }
+
+  .mobile-box span {
+    background-color: rgb(253, 227, 17);
+    color: rgb(38, 38, 38);
+    height: 10vh;
+  }
+
+ /*
+ ███████  ██████   ██████  ████████ ███████ ██████
+ ██      ██    ██ ██    ██    ██    ██      ██   ██
+ █████   ██    ██ ██    ██    ██    █████   ██████
+ ██      ██    ██ ██    ██    ██    ██      ██   ██
+ ██       ██████   ██████     ██    ███████ ██   ██
+ */
+  .footer-mobile-wrapper {
+    /*height: 400px;*/
   }
 }
