--- a/mobile.css
+++ b/mobile.css
@@ -72,6 +72,10 @@
   #gallery h2 {
     padding: 40px 0;
   }
+  #gallery h2 {
+    padding-bottom: 80px;
+  }
+  
   h3 {
     font-size: 1.5rem;
   }
@@ -134,38 +138,19 @@
  ██    ██ ██   ██ ██      ██      ██      ██   ██    ██
   ██████  ██   ██ ███████ ███████ ███████ ██   ██    ██
  */
-  .mobile-gallery {
-    height: 1800px;
-    display: block;
-    max-height: 100%;
-    width: 100%;
-  }
-
-  .mobile-container {
-  }
 
   .mobile-box {
-    margin-bottom: 30px;
-    border: 10px solid whitesmoke;
-    /*min-width: 500px;*/
-    /*min-width: 400px;*/
+    margin-bottom: 40px;
   }
 
   .mobile-box img {
     width: 100%;
-    /*height: 60%;*/
-    /*border: 5px solid black;*/
-    /*display: block;*/
-  }
-
-  .mobile-box a {
-    text-decoration: none;
   }
   
   .mobile-box a span {
     line-height: 3.6rem;
-    width: 100%;
   }
+
 
   /*
 ███████  ██████   ██████  ████████ ███████ ██████
@@ -175,6 +160,5 @@
 ██       ██████   ██████     ██    ███████ ██   ██
 */
   .footer-mobile-wrapper {
-    /*height: 400px;*/
   }
 }
