--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -141,12 +141,12 @@
     width: 100%;
   }
   
-
   .mobile-container {
     background-color: rgb(38, 38, 38);
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    height: 100%;
+    justify-content: space-evenly;
   }
 
   .mobile-box {
@@ -167,20 +167,66 @@
   }
 
 
-    /*
+  /*
  ███████  ██████   ██████  ████████ ███████ ██████
  ██      ██    ██ ██    ██    ██    ██      ██   ██
  █████   ██    ██ ██    ██    ██    █████   ██████
  ██      ██    ██ ██    ██    ██    ██      ██   ██
  ██       ██████   ██████     ██    ███████ ██   ██
  */
-  .footer-wrapper {
-    display: none;
-  }
+ .footer-wrapper {
+   display: none;
+ }
   .footer-mobile-wrapper {
     background-color: blueviolet;
+    display: inline-block;
+    width: 100%;
+  }
+  .mobile-follow-b {
+    /*background-color: blanchedalmond;*/
+    font-family: 'Cormorant', sans-serif;
+    font-size: 2.4rem;
+    font-weight: 500;
+    /*margin-top: 120px;*/
+    text-align: center;
+  }
+  .mobile-social-ul {
+    /*background-color: red;*/
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .mobile-social-list {
+    /*background-color: darkkhaki;*/
+    list-style: none;
+    width: 150px;
+    text-align: center;
+    /*position: absolute;
+    flex-basis: 20%;*/
+  }
+  .mobile-a-text {
+    /*background-color: aqua;*/
+    text-decoration: none;
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+  }
+  .mobile-social-logo {
+    width: 55px;
+    height: 55px;
+    margin-top: 15%;
+  }
+  .mobile-copyright {
+    /*background-color: coral;*/
     display: block;
-    height: 400px;
+    font-family: 'Cormorant', sans-serif;
+    margin: 0 auto;
+    text-decoration: none;
+    text-align: center;
+    width: 20%;
   }
 
 }
