--- a/desktop.css
+++ b/desktop.css
@@ -6,6 +6,10 @@
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
 @media screen and (min-width: 1280px) {
+  nav .follow {
+    display: none;
+  }
+  
   nav ul {
     /*margin-left: 21vw;*/
   }
