--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -6,7 +6,9 @@
   body {
     overflow: hidden;
   }
-
+  nav .batcave {
+    display: none;
+  }
   header,
   nav,
   nav ul,
@@ -177,27 +179,42 @@
  .footer-wrapper {
    display: none;
  }
+ 
+
+ .footer-mobile-wrapper h4,
+ .mobile-social-ul,
+ .mobile-copyright {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+ 
+ 
   .footer-mobile-wrapper {
-    background-color: blueviolet;
-    display: inline-block;
+    /*background-color: blueviolet;*/
+    display: block;
+    height: 500px;
     width: 100%;
   }
-  .mobile-follow-b {
+  .mobile-followb-wrapper {
     /*background-color: blanchedalmond;*/
+    display: block;
+    height: 30%;
+    margin-top: 100px;
+  }
+  .footer-mobile-wrapper h4 {
+    /*background-color: aquamarine;*/
     font-family: 'Cormorant', sans-serif;
     font-size: 2.4rem;
     font-weight: 500;
-    /*margin-top: 120px;*/
-    text-align: center;
+    height: 100%;
   }
+  
   .mobile-social-ul {
     /*background-color: red;*/
     width: 100%;
-    height: 80%;
-    display: flex;
+    height: 40%;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
   }
   .mobile-social-list {
     /*background-color: darkkhaki;*/
@@ -208,25 +225,34 @@
     flex-basis: 20%;*/
   }
   .mobile-a-text {
-    /*background-color: aqua;*/
-    text-decoration: none;
-    display: inline-block;
-    width: 80px;
-    height: 80px;
+/*     background-color: aqua;
+   width: 80px;
+    height: 80px;*/
   }
+  
   .mobile-social-logo {
     width: 55px;
     height: 55px;
-    margin-top: 15%;
   }
   .mobile-copyright {
-    /*background-color: coral;*/
-    display: block;
-    font-family: 'Cormorant', sans-serif;
+    /*background-color:  bisque;*/
+    /*display: block;*/
+    width: 100%;
+    height: 30%;
+/*    text-align: center;
     margin: 0 auto;
+    */
+  }
+  .mobile-a-copyright {
+    /*background-color:  brown;*/
+    font-family: 'Cormorant', sans-serif;
     text-decoration: none;
-    text-align: center;
-    width: 20%;
+    font-size: 1.5rem;
+  }
+  .mobile-a-copyright p {
+    /*background-color: cornflowerblue;*/
+    height: 100%;
+    display: inline;
   }
 
 }
