--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -6,9 +6,11 @@
   body {
     overflow: hidden;
   }
+
   nav .batcave {
     display: none;
   }
+
   header,
   nav,
   nav ul,
@@ -125,7 +127,6 @@
   background-size: 50% 50%;
   background-position: right;
   }*/
-  
   /*
   ██████   █████  ██      ██      ███████ ██████  ██    ██
  ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
@@ -142,7 +143,7 @@
     max-height: 100%;
     width: 100%;
   }
-  
+
   .mobile-container {
     background-color: rgb(38, 38, 38);
     display: flex;
@@ -153,21 +154,21 @@
 
   .mobile-box {
     text-align: center;
-      border: 10px solid whitesmoke;
+    border: 10px solid whitesmoke;
   }
+
   .mobile-box a {
     text-decoration: none;
   }
-  
+
   .mobile-box img {
     display: block;
   }
-  
+
   .mobile-box span {
     background-color: rgb(253, 227, 17);
     color: rgb(38, 38, 38);
   }
-
 
   /*
  ███████  ██████   ██████  ████████ ███████ ██████
@@ -176,46 +177,48 @@
  ██      ██    ██ ██    ██    ██    ██      ██   ██
  ██       ██████   ██████     ██    ███████ ██   ██
  */
- .footer-wrapper {
-   display: none;
- }
- 
+  .footer-wrapper {
+    display: none;
+  }
 
- .footer-mobile-wrapper h4,
- .mobile-social-ul,
- .mobile-copyright {
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
- 
- 
+  .footer-mobile-wrapper h4,
+  .mobile-social-ul,
+  .mobile-copyright {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .footer-mobile-wrapper {
     /*background-color: blueviolet;*/
     display: block;
     height: 500px;
     width: 100%;
   }
+
   .mobile-followb-wrapper {
     /*background-color: blanchedalmond;*/
     display: block;
     height: 30%;
     margin-top: 100px;
   }
+
   .footer-mobile-wrapper h4 {
     /*background-color: aquamarine;*/
+    /*background: linear-gradient(to right, rgba(59, 89, 152, 0.8), rgb(29,161,242));*/
     font-family: 'Cormorant', sans-serif;
     font-size: 2.4rem;
     font-weight: 500;
     height: 100%;
   }
-  
+
   .mobile-social-ul {
     /*background-color: red;*/
     width: 100%;
     height: 40%;
     flex-direction: row;
   }
+
   .mobile-social-list {
     /*background-color: darkkhaki;*/
     list-style: none;
@@ -224,35 +227,42 @@
     /*position: absolute;
     flex-basis: 20%;*/
   }
+
   .mobile-a-text {
-/*     background-color: aqua;
+    /*     background-color: aqua;
    width: 80px;
     height: 80px;*/
   }
-  
+
   .mobile-social-logo {
-    width: 55px;
-    height: 55px;
+    width: 65px;
+    height: 65px;
   }
+
   .mobile-copyright {
     /*background-color:  bisque;*/
     /*display: block;*/
     width: 100%;
-    height: 30%;
-/*    text-align: center;
+    height: 35%;
+    /*    text-align: center;
     margin: 0 auto;
     */
   }
+
   .mobile-a-copyright {
     /*background-color:  brown;*/
+    color: rgb(38, 38, 38);
     font-family: 'Cormorant', sans-serif;
     text-decoration: none;
-    font-size: 1.5rem;
-  }
-  .mobile-a-copyright p {
-    /*background-color: cornflowerblue;*/
-    height: 100%;
-    display: inline;
+    font-size: 1.4rem;
   }
 
+  .mobile-a-copyright p {
+    /*background-color: cornflowerblue;*/
+    display: inline;
+    height: 100%;
+  }
+
+
+  
 }
