--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -180,6 +180,7 @@
   .footer-wrapper {
     display: none;
   }
+  
 
   .footer-mobile-wrapper h4,
   .mobile-social-ul,
@@ -192,7 +193,8 @@
   .footer-mobile-wrapper {
     /*background-color: blueviolet;*/
     display: block;
-    height: 500px;
+    /*height: 500px;*/
+    height: 80vh;
     width: 100%;
   }
 
@@ -243,7 +245,7 @@
     /*background-color:  bisque;*/
     /*display: block;*/
     width: 100%;
-    height: 35%;
+    height: 40%;
     /*    text-align: center;
     margin: 0 auto;
     */
@@ -262,7 +264,5 @@
     display: inline;
     height: 100%;
   }
-
-
   
 }
