--- a/style.css
+++ b/style.css
@@ -208,6 +208,14 @@ p {
 .feature p {
   font-size: 1.2em;
 }
+.read-more {
+  font-size: 1rem;
+}
+
+.source {
+  font-size: 0.8rem;
+}
+
 
 /*p {
   font-size: 18px;
@@ -312,7 +320,7 @@ p {
 }
 
 .feature {
-  height: 1200px;
+  height: 1300px;
   position: relative;
   /*<-- if navbar disappears, disable relative */
   flex-basis: 20%;
@@ -331,10 +339,31 @@ p {
   width: 400px;
 }
 
-/*.actors .feature .picture {
-  height: 300px;
-  width: 500px;
-}*/
+.read-more,
+.source {
+  display: inline-block;
+  margin-top: 20px;
+  text-decoration: none;
+}
+.button {
+  border-radius: 10px;
+  cursor: pointer;
+  /*font-size: 1.2rem;*/
+  padding: 10px;
+  text-align: center;
+}
+
+.read-more.button {
+  background-color: rgba(180, 165, 147, 0.7);
+  width: 40%;
+}
+
+.source.button {
+  background-color: rgba(138, 134, 127, 0.7);
+  width: 35%;
+}
+
+
 /*
 ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
 ██     ██ ██   ██ ██   ██ ██   ██ ██   ██ ██      ██   ██ ██
