--- a/desktop.css
+++ b/desktop.css
@@ -27,9 +27,10 @@
   }
 
   .hero-text {
-    min-height: 25%;
-    max-width: 35%;
+    position: absolute;
     top: 8vh;
+    /*min-height: 25%;*/
+    /*width: 35%;*/
     /*bottom: 200px;*/
   }
   #hero {
@@ -44,7 +45,9 @@
     
   }
 
-  #hero h2 {}
+  #hero h2 {
+    margin-bottom: 10px;
+  }
     
     .movies h2,
     .actors h2,
