--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ header {
 
 .logo-link {
   width: 100%;
-  /*background-color: greenyellow;*/
   display: inline-block;
   /*
   display: inline-block;
@@ -124,9 +123,8 @@ nav ul li a {
 }
 
 #bat-video {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
+  width: 100%;
 }
 
 /*
@@ -146,15 +144,21 @@ nav ul li a {
   color: rgb(253, 227, 17);
   cursor: default;
   font-family: 'Lato', sans-serif;
-  position: absolute;
   text-align: center;
   text-shadow: 6px 6px 4px black;
   text-transform: uppercase;
   width: 100%;
   
+  
   display: flex;
   justify-content: center;
+  align-items: flex-end;
   flex-direction: column;
+
+
+  /*------------------position: absolute;----------------------*/
+  
+  
   /*min-width: 30vw;
   padding: 0 20px;
   bottom: 280px;
@@ -166,29 +170,21 @@ nav ul li a {
   border: 5px solid rgb(253, 227, 17);*/
   /*bottom: 200px;*/
 }
-
+#hero h1, #hero h2 {
+  margin: 0 auto;
+}
 #hero h1 {
   font-size: 7rem;
-  /*font-weight: 300;*/
   font-weight: bold;
   letter-spacing: 1.8rem;
-  display: block;
-  /*padding-bottom: 45px;*/
-}
+  }
 
 #hero h2 {
-  background-color:  bisque;;
-  color: inherit;
-  display: block;
+  background-color:  bisque;
   font-size: 2rem;
   font-weight: 300;
-  margin: 0 auto;
-
   letter-spacing: 0.6rem;
   word-spacing: 0.4rem;
-  
-  /*padding-bottom: 60px;*/
-  /*padding-bottom: 45px;*/
 }
 
 .movies h2,
