--- a/tablet.css
+++ b/tablet.css
@@ -9,17 +9,7 @@
   nav ul li {
     flex-basis: 15%;
   }
-
-  .hero-text {
-    height: 20%;
-    /*  
-   width: 55%;
-   max-width: 40%;
-   min-width: 20vw;
-  */
-    top: 12vh;
-  }
-
+  
   #hero {
     background-attachment: local;
   }
@@ -30,6 +20,24 @@
 
   #hero h2 {
     padding-bottom: 15px;
+  }
+  
+  #bat-video {
+    height: 50vh;  
+    margin-top: 100px;
+    display: inline;
+    position: relative;
+  }
+  .hero-text {
+    height: 20%;
+    bottom: 50%;
+    position: absolute;
+    
+    /*top: 42vh;*/
+    
+    /*position: absolute;*/
+    
+
   }
 
   /*
