--- a/desktop.css
+++ b/desktop.css
@@ -26,26 +26,38 @@
     /*color: rgb(255, 199, 108);*/
   }
 
-  .hero-text {
-    position: absolute;
-    top: 8vh;
-    /*min-height: 25%;*/
-    /*width: 35%;*/
-    /*bottom: 200px;*/
-  }
   #hero {
-
   }
   #bat-video {
     height: 100vh;
   }
+  
+  #hero-text {
+    
+    width: 100%;
+    height: 100%;
+    
+    position: absolute;
+    height: 90%;
+    justify-content: flex-end;
+    flex-direction: column;
+    /*min-height: 25%;*/
+    /*width: 35%;*/
+    /*bottom: 200px;*/
+  }
 
   #hero h1 {
+    font-size: 7rem;
+    font-weight: bold;
+    letter-spacing: 1rem;
     padding: 10px 20px 0;
-    
   }
 
   #hero h2 {
+    font-size: 2rem;
+    font-weight: 300;
+    letter-spacing: 0.6rem;
+    word-spacing: 0.4rem;
     margin-bottom: 10px;
   }
     
