--- a/style.css
+++ b/style.css
@@ -106,8 +106,11 @@ nav ul li a {
 ██   ██ ███████ ██   ██  ██████
 */
 #hero {
+  background-color: chocolate;
   display: flex;
   justify-content: center;
+  width: 100%;
+  
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -119,7 +122,6 @@ nav ul li a {
   -ms-user-select: none;
   /* Internet Explorer/Edge */
   user-select: none;
-  width: 100%;
 }
 
 #bat-video {
@@ -138,8 +140,8 @@ nav ul li a {
   background-color: rgb(253, 227, 17);
 }
 
-.hero-text {
-  background-color: aquamarine;;
+#hero-text {
+  background-color: aquamarine;
   color: whitesmoke;
   color: rgb(253, 227, 17);
   cursor: default;
@@ -147,18 +149,10 @@ nav ul li a {
   text-align: center;
   text-shadow: 6px 6px 4px black;
   text-transform: uppercase;
-  width: 100%;
-  
   
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  flex-direction: column;
-
-
+  
   /*------------------position: absolute;----------------------*/
-  
-  
   /*min-width: 30vw;
   padding: 0 20px;
   bottom: 280px;
@@ -170,21 +164,18 @@ nav ul li a {
   border: 5px solid rgb(253, 227, 17);*/
   /*bottom: 200px;*/
 }
+
 #hero h1, #hero h2 {
-  margin: 0 auto;
+  /*margin: 0 auto;*/
+
 }
+
 #hero h1 {
-  font-size: 7rem;
-  font-weight: bold;
-  letter-spacing: 1.8rem;
-  }
+  background-color: blue;
+}
 
 #hero h2 {
-  background-color:  bisque;
-  font-size: 2rem;
-  font-weight: 300;
-  letter-spacing: 0.6rem;
-  word-spacing: 0.4rem;
+  background-color: bisque;
 }
 
 .movies h2,
@@ -230,11 +221,10 @@ p {
 .feature p {
   font-size: 1.2em;
 }
+
 .button {
   font-size: 1rem;
 }
-
-
 
 /*p {
   font-size: 18px;
@@ -364,6 +354,7 @@ p {
   margin-top: 20px;
   text-decoration: none;
 }
+
 .button {
   border-radius: 10px;
   cursor: pointer;
@@ -382,7 +373,6 @@ p {
   width: 35%;
   padding: 22px;
 }
-
 
 /*
 ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
