--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -87,7 +87,7 @@
     background-attachment: scroll;*/
   }
 
-  .hero-text {
+  #hero-text {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,14 +95,11 @@
   }
 
   #hero h1 {
-    font-size: 3rem;
-    letter-spacing: 1.4rem;
+
   }
 
   #hero h2 {
-    font-size: 1rem;
-    letter-spacing: 0.3rem;
-    word-spacing: 0.2rem;
+
   }
 
   /*
