--- a/tablet.css
+++ b/tablet.css
@@ -11,18 +11,18 @@
   }
   
   #hero {
-    background-attachment: local;
+    /*background-attachment: local;*/
   }
   
   #bat-video {
-    height: 400px;
+    height: 20%;
     margin-top: 100px;
   }
   
   #hero-text {
-   position: absolute;
+   
    /*bottom: 20%;*/
-   bottom: 20%;
+   /*bottom: 20%;*/
   /*   top: 0;*/
 
 
