--- a/desktop.css
+++ b/desktop.css
@@ -6,7 +6,6 @@
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
 @media screen and (min-width: 1280px) {
-
   nav ul {
     /*margin-left: 21vw;*/
   }
@@ -27,20 +26,26 @@
   }
 
   #hero {
+    margin-bottom: 8vh;
   }
+
   #bat-video {
     height: 100vh;
   }
-  
+
   #hero-text {
+    /*bottom: 10%;*/
     
-    width: 100%;
+/*    width: 100%;
     height: 100%;
-    
     position: absolute;
-    height: 90%;
+    height: 90%;*/
+    
+    /*    
+    display: flex
     justify-content: flex-end;
-    flex-direction: column;
+    flex-direction: column;*/
+    
     /*min-height: 25%;*/
     /*width: 35%;*/
     /*bottom: 200px;*/
@@ -60,12 +65,12 @@
     word-spacing: 0.4rem;
     margin-bottom: 10px;
   }
-    
-    .movies h2,
-    .actors h2,
-    #gallery h2 {
-      padding: 80px 0;
-    }
+
+  .movies h2,
+  .actors h2,
+  #gallery h2 {
+    padding: 80px 0;
+  }
 
   /*
     ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
@@ -74,27 +79,29 @@
     ██ ███ ██ ██   ██ ██   ██ ██      ██      ██      ██   ██      ██
      ███ ███  ██   ██ ██   ██ ██      ██      ███████ ██   ██ ███████
     */
-    .wrappers {
-      height: 92vh;
-      /*width: 100%;*/
-    }
-    .hero-to-movies,
-    .movies-to-actors,
-    .actors-to-gallery {
-      background-attachment: fixed;
-    }
-    
-    .hero-to-movies {
-      background-size: 100vw 110%;
-    }
-    .movies-to-actors {
-      background-size: 100vw 100%;
-    }
-    .actors-to-gallery {
-      background-size: 100vw 100%;
-    }
-    
-    
+  .wrappers {
+    height: 92vh;
+    /*width: 100%;*/
+  }
+
+  .hero-to-movies,
+  .movies-to-actors,
+  .actors-to-gallery {
+    background-attachment: fixed;
+  }
+
+  .hero-to-movies {
+    background-size: 100vw 110%;
+  }
+
+  .movies-to-actors {
+    background-size: 100vw 100%;
+  }
+
+  .actors-to-gallery {
+    background-size: 100vw 100%;
+  }
+
   /*
    ██████   █████  ██      ██      ███████ ██████  ██    ██
   ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
@@ -105,7 +112,7 @@
   .mobile-gallery {
     display: none;
   }
-  
+
   .container {
     background-color: rgb(38, 38, 38);
     display: flex;
@@ -151,7 +158,7 @@
     width: 100%;
     height: 100%;
   }
-  
+
   /*
   ███████  ██████   ██████  ████████ ███████ ██████
   ██      ██    ██ ██    ██    ██    ██      ██   ██
@@ -165,9 +172,11 @@
     /*  overflow: hidden;
     box-sizing: border-box;*/
   }
+
   .footer-mobile-wrapper {
     display: none;
   }
+
   .footer-wrapper {
     height: 100%;
     width: 100%;
@@ -175,7 +184,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: 1fr 1fr;
   }
-  
+
   /*
   ███████  ██████   ██████  ████████ ███████ ██████
   ██      ██    ██ ██    ██    ██    ██      ██   ██
@@ -200,7 +209,7 @@
     background-attachment: fixed;
     grid-column: 1/4;
   }
-  
+
   /*
   ███████  ██████   ██████  ████████ ███████ ██████
   ██      ██    ██ ██    ██    ██    ██      ██   ██
@@ -223,7 +232,7 @@
     /*transition: transform 2s;*/
     transition: background-color 0s ease-in-out;
   }
-  
+
   .address-logo {
     height: 100%;
     background-image: url(img/logo/footer-logo-1.jpg);
@@ -239,12 +248,12 @@
     opacity: 1;
     transition: opacity 2s ease-in-out;*/
   }
-  
+
   .address-map {
     flex-basis: 150%;
     margin: 20px 10px 20px 20px;
   }
-  
+
   .text-wrapper {
     width: 100%;
     height: 100%;
@@ -255,7 +264,7 @@
     align-items: center;
     flex-direction: column;
   }
-  
+
   /*
   ███████  ██████   ██████  ████████ ███████ ██████
   ██      ██    ██ ██    ██    ██    ██      ██   ██
@@ -276,7 +285,7 @@
     /*removed whitespace at bottom of page*/
     /*background-image: linear-gradient(to right, black, white);*/
   }
-  
+
   .profile-logo {
     height: 100%;
     background-image: url(img/logo/footer-logo-2.jpg);
@@ -284,7 +293,7 @@
     background-position: center;
     background-size: cover;
   }
-  
+
   /*
   .footer-pic-wrapper {
     opacity: 0;
@@ -312,7 +321,7 @@
     grid-column: 3/4;
     overflow: hidden;
   }
-  
+
   .info-logo {
     height: 100%;
     width: 100%;
@@ -322,7 +331,7 @@
     background-position: center;
     transition: transform 2s ease-out;
   }
-  
+
   /*
   ███████  ██████   ██████ ██  █████  ██
   ██      ██    ██ ██      ██ ██   ██ ██
@@ -336,16 +345,16 @@
     height: 55px;
     margin-top: 10px;
   }
-  
+
   .facebook {
     position: relative;
     /*padding-bottom: 3px;*/
   }
-  
+
   .twitter {
     transition: transform 1.5s;
   }
-  
+
   /*
    ██████  ██████  ██████  ██    ██ ██████  ██  ██████  ██   ██ ████████
   ██      ██    ██ ██   ██  ██  ██  ██   ██ ██ ██       ██   ██    ██
@@ -361,9 +370,8 @@
     text-decoration: none;
     display: inline-block;
     /*width: 12%;*/
-
   }
-  
+
   /*
   ███████  ██████   ██████  ████████ ███████ ██████
   ██      ██    ██ ██    ██    ██    ██      ██   ██
@@ -386,13 +394,13 @@
     opacity: 0;
     transition: opacity 5s ease-in-out;
   }
-  
+
   .social-logo,
   .follow-b {
     opacity: 0.7;
     /*.social-list h5 = removed h5 ----*/
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -415,7 +423,7 @@
   .follow-b:hover {
     opacity: 1;
   }
-  
+
   .social-logo:hover,
   .social-list:hover .social-logo {
     opacity: 1;
@@ -423,7 +431,7 @@
     font-size: 26px;
     /*.social-list:hover h5 -- removed h5 */
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -442,7 +450,7 @@
     background-color: rgb(252, 243, 201);
     color: rgb(38, 38, 38);
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -464,19 +472,19 @@
     /*flex-direction: column;*/
     /*transition: background-color 6s ease 0s;*/
   }
-  
+
   /*---  Logo on RETURN----*/
   .footer-address:hover .address-logo {
     transform: translateX(-500px) rotate(390deg);
   }
-  
+
   .footer-address:hover .address-map {
     background-image: url(img/map.jpg);
     width: 100%;
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -494,7 +502,7 @@
   .footer-bat-profile:hover .profile-logo {
     display: none;
   }
-  
+
   .footer-bat-profile:hover .footer-pic-wrapper {
     display: inline-block;
     opacity: 1;
@@ -502,7 +510,7 @@
     height: 100%;
     /* display: inline-block;*/
   }
-  
+
   .footer-bat-profile:hover .profile-pic {
     background-image: url(img/car.jpg);
     width: 100%;
@@ -511,7 +519,7 @@
     background-position: top;
     background-size: cover;
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -529,13 +537,13 @@
   .footer-info:hover {
     background-color: rgb(252, 243, 201);
   }
-  
+
   .footer-info:hover .info-logo {
     display: inline;
     background-size: 100%;
     transform: translateY(300px);
   }
-  
+
   .footer-info:hover .info-text {
     width: 100%;
     display: inline;
@@ -543,7 +551,7 @@
     width: 100%;
     text-align: center;
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -563,11 +571,11 @@
     height: 100%;
     width: 100%;
   }
-  
+
   .footer-info:hover .follow-b {
     /*background-color: darkgreen;*/
   }
-  
+
   .footer-info:hover .social-ul {
     /*background-color: red;*/
     width: 100%;
@@ -577,7 +585,7 @@
     align-items: center;
     justify-content: center;
   }
-  
+
   .footer-info:hover .social-list {
     /*background-color: darkkhaki;*/
     list-style: none;
@@ -585,7 +593,7 @@
     /*position: absolute;
     flex-basis: 20%;*/
   }
-  
+
   /*
   ██   ██  ██████  ██    ██ ███████ ██████
   ██   ██ ██    ██ ██    ██ ██      ██   ██
@@ -615,19 +623,19 @@
     height: 80px;
     line-height: 15px;
   }
-  
+
   .a-text:hover .facebook {
     background-color: rgba(59, 89, 152, 0.8);
     transform: scale(1.2);
     border-radius: 50%;
   }
-  
+
   .a-text:hover .twitter,
   .twitter:hover {
     transform: rotate(390deg);
     /*background: linear-gradient(45deg, #66757f, #00ACEE, #36D8FF, #f5f8fa, #ffffff);*/
   }
-  
+
   .a-text:hover .instagram {
     transform: scale(1.2);
     border-radius: 17px;
